--- a/package.json
+++ b/package.json
@@ -12,11 +12,26 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.4.0",
+    "bootstrap": "^4.5.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
+    "node-sass": "^9.0.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-bootstrap-carousel": "^4.1.1",
+    "react-bootstrap-typeahead": "^6.2.3",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-image-gallery": "^1.3.0",
+    "react-player": "^2.12.0",
+    "sass": "^1.64.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-image-gallery": "^1.2.0",
+    "babel-plugin-styled-components": "^2.1.4"
   }
 }
