--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^4.5.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
@@ -28,10 +29,14 @@
     "react-image-gallery": "^1.3.0",
     "react-player": "^2.12.0",
     "sass": "^1.64.2",
+    "styled-components": "^6.0.7",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@types/react-image-gallery": "^1.2.0",
     "babel-plugin-styled-components": "^2.1.4"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
