--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
+    "next-auth": "^4.22.1",
     "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
