--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
     "next-auth": "^4.22.1",
+    "next-intl": "^2.20.0",
     "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
